--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ html, body {
   min-width: 320px;
   min-height: 100vh;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -33,20 +33,20 @@ a:hover {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: (0.85rem, 2.5vw, 1.65rem);;
   line-height: 1.1;
   color: rgb(255, 105, 180);
 }
 
 h2, h3 {
   color: #ff69b4;
-  margin-bottom: clamp(0.5rem, 1vw, 1rem);
-  margin-top: clamp(0.5rem, 1vw, 1rem);
-  font-size: clamp(0.75rem, 2.5vw, 2rem);
+  margin-bottom: clamp(0.2rem, 1vw, 0.5rem);
+  margin-top: clamp(0.2rem, 1vw, 0.5rem);
+  font-size: clamp(0.75rem, 2.5vw, 1.5rem);
 }
 
 p {
-  font-size: clamp(0.5rem, 1.25vw, 1.25rem);
+  font-size: clamp(0.5rem, 1.25vw, 1rem);
   line-height: 1.4;
   font-weight: bolder;
 }
@@ -55,7 +55,8 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  margin: 0.5rem;
+  font-size: clamp(0.5rem, 1vw, 1rem);
   font-weight: 500;
   font-family: inherit;
   background-color: #FF69B4;
